--- a/src/app/public-inner-project/public-inner-project.component.html
+++ b/src/app/public-inner-project/public-inner-project.component.html
@@ -111,12 +111,7 @@
           <ul class="needs-list">
             @for (need of project()?.needs || []; track need.name) {
             <li>
-              <ion-icon
-                [name]="getNeedIcon(need)"
-                [color]="getNeedIconColor(need)"
-                class="need-icon"
-              >
-              </ion-icon>
+              <ion-icon [name]="getNeedIcon(need)" class="need-icon"></ion-icon>
               {{ need.name }}
             </li>
             }
