--- a/src/app/components/project-footer/project-footer.component.html
+++ b/src/app/components/project-footer/project-footer.component.html
@@ -14,7 +14,6 @@
         }
       </ion-button>
 
-      @if (project().state !== 'done') {
       <ion-button
         [fill]="isUserSupported(project()) ? 'solid' : 'clear'"
         size="small"
@@ -38,14 +37,15 @@
         {{ (project().opposes || []).length }}
         }
       </ion-button>
-      } @if (project().state === 'done') {
+
+      @if (project().state === 'done') {
       <ion-button
         [fill]="isUserVerified(project()) ? 'solid' : 'clear'"
         size="small"
         (click)="onVerifyButtonClick($event)"
         class="vote-button"
       >
-        {{ "HOME.VERIFY" | translate }}
+        <ion-icon name="shield-checkmark"></ion-icon>
         @if ((project().verifies || []).length > 0) {
         {{ (project().verifies || []).length }}
         }
