--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -80,4 +80,9 @@
   </ion-card-content>
 
   <app-project-footer [project]="project()"></app-project-footer>
+  
+  <!-- Date line -->
+  <div class="project-date">
+    <span class="date-text">{{ getFormattedDate() }}</span>
+  </div>
 </ion-card>
